using guid for identifier and fileservice to persist data

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /PrePassHackathonTeamEApi/bin/Debug/net9.0
 /PrePassHackathonTeamEApi/obj
 /PrePassHackathonTeamEApi/PrePassHackathonTeamEApi.csproj.user
+/PrePassHackathonTeamEApi/data.json
+/PrePassHackathonTeamEApi/bin/Debug/net8.0
