--- a/PrePassHackathonTeamEApi/appsettings.json
+++ b/PrePassHackathonTeamEApi/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings:JwToken": "XOxQFDzAjOJeeHGSRYMmZZntyVg/IuKL4H0aw=ghNhaF4zDOT81aS7Maf28wmc0mMp=Gqx1o22m4xXE7lRBfxKMkR9FDj0wbZPG6BlxNdGF-Rca3pgGOTn5UMfFM?aT6VsjP6/yJpFgbW8QmTpMMuxaZcHrPxE?Cs0qZ6zRIkU3P=?4Xnrj7RKdY029F8Lw!nJ00QzB2ADqLW7bqdr6DNpp7mu1G=dxmpvw1q5Hs6k9EQ-jt-vHPq5?fJkhv0oyE"
 }
